[metadata]
name = potato_distillery
version = 0.0.1
author = Spyros Mouselinos
author_email = s.mouselinos@uw.edu.pl
description = A package that distills large ML models.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SpyrosMouselinos/potato_distillery
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = ['torch','torchinfo','transformers','huggingface']

[options.packages.find]
where = src